--- a/index.html
+++ b/index.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles/styles.css" />
-    <title>Document</title>
+    <link rel="stylesheet" href="styles/styles.css" />
+    <title>Lista de Tareas</title>
   </head>
   <body>
-    <h1>Mi TODO list</h1>
+    <div class="container">
+      <h1>¡Organiza tus Tareas!</h1>
+      <div class="task-input-container">
+        <input
+          type="text"
+          id="taskInput"
+          placeholder="Escribe tu nueva tarea"
+        />
+        <button onclick="addTask()">Agregar</button>
+      </div>
+      <ul id="taskList"></ul>
+    </div>
+
     <script src="scripts/script.js"></script>
   </body>
 </html>
